<resources>
    <string name="app_name">Corona_Tracker_Java</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="confirm_password">confirm password</string>
    <string name="already_registered">already registered?</string>
    <string name="sign_in_here">Sign in Here!</string>
    <string name="not_registered">not_registered?</string>
    <string name="register">register</string>
    <string name="take_me_back_to_login">take me back to login</string>
    <string name="title_activity_google_maps_tracker">Map</string>
    <string name="googleapitestingfordevs">GoogleAPITestingForDevs</string>
    <string name="hint_password">hint_password</string>
    <string name="email">email</string>
    <string name="action_sign_in_short">action_sign_in_short</string>
</resources>