<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#123456"
    android:orientation="vertical">

    <TextView
        android:layout_width="150dp"
        android:layout_height="23dp"
        android:text="@string/sign_in_here"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:hint="@string/username"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="46dp" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:hint="@string/password"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="81dp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/login"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="129dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/not_registered"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="239dp" />

    <TextView
        android:id="@+id/textview_register"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:text="@string/register"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="188dp" />


</LinearLayout>