<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#123456"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <TextView
        android:layout_width="150dp"
        android:layout_height="23dp"
        android:text="@string/sign_in_here"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:hint="@string/email"
        android:autofillHints="username"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:focusableInTouchMode="true"
        android:hint="@string/hint_password"
        android:imeOptions="actionUnspecified"
        android:maxLines="1"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edittext_conf_password"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:hint="@string/confirm_password"
        android:autofillHints="confirm password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/sign_up_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_sign_in_short"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@null"
        android:textAllCaps="false"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_registered"/>

        <Button
            android:id="@+id/button_taketologinpage"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/take_me_back_to_login"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>